--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "issues": "https://github.com/sebastianbergmann/object-reflector/issues",
         "security": "https://github.com/sebastianbergmann/object-reflector/security/policy"
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "platform": {
@@ -26,7 +25,7 @@
         "php": ">=8.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.0-dev"
+        "phpunit/phpunit": "^12.0"
     },
     "autoload": {
         "classmap": [
